Fixed orientation bug on mobile

--- a/client-side/styles/views/_mobile-pages.sass
+++ b/client-side/styles/views/_mobile-pages.sass
@@ -1,8 +1,10 @@
 body.mobile
-	background: url("#{$images}/mobile/bg-mobile.jpg")
+	background: url("#{$images}/mobile/bg-mobile.jpg") no-repeat
 	background-size: 100% 100%
 	position: relative
 	min-width: 100%
+	height: 100%
+	overflow: hidden
 
 	-webkit-touch-callout: none
 	-webkit-user-select: none
@@ -21,11 +23,13 @@ body.mobile
 		display: table
 		height: 100%
 		width: 100%
+		overflow: hidden
 
 		.content-wrapper
 			display: table-cell
 			text-align: center
 			vertical-align: middle
+			overflow: hidden
 
 			img
 				max-width: 100%
